<resources>
    <string name="app_name">Bán Hàng</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="e_mail">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="tag">Phần mềm quản lý đặt hàng</string>
    <string name="vui_long_doi">Vui lòng đợi</string>
    <string name="vui_long_dien_pass">Vui lòng nhập mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Nhập lại</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="nhap_tim_kiem">Nhập thông tin tìm kiếm</string>
    <string name="thong_tin_nguoi_dung">Thông tin</string>
    <string name="nhap_dung_mat_khau_moi">Cần nhập đúng mật khẩu mới và xác nhận</string>
    <string name="dang_nhap_thanh_cong">Đăng nhập thành công</string>
    <string name="doi_mat_khau_thanh_cong">Đổi mật khẩu thành công</string>
    <string name="mat_khau_cu_khong_chinh_xac">Mật khẩu cũ không chính xác</string>
    <string name="do_dai_mat_khau_khong_phu_hop">Độ dài mật khẩu mới từ 8 ký tự trở lên</string>
    <string name="check_connection_network">Vui lòng kiểm tra lại kết nối mạng</string>
    <string name="vui_long_nhap_day_du_thong_tin">Vui lòng nhập đầy đủ thông tin</string>
    <string name="dang_nhap_thai_bai">Đăng nhập thất bại, vui lòng thử lại</string>
    <string name="doi_mat_khau_thai_bai">Đổi mật khẩu thất bại, vui lòng thử lại</string>
    <string name="taikhoan_matkhau_khong_dung">Tài khoản, mật khẩu không chính xác</string>
    <string name="co_loi_xay_ra">Có lỗi xảy ra, vui lòng liên hệ admin</string>
    <string name="sai_thong_tin_dang_nhap">Sai thông tin đăng nhập, vui lòng thử lại</string>
    <string name="title_good">Sản phẩm</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="title_profile">Cá nhân</string>
    <string name="so_don_hang">Số đơn hàng</string>
    <string name="so_don_hang_hai_cham">Số đơn hàng:</string>
    <string name="tong_thu">Tổng thu</string>
    <string name="ma_hoa_don">Mã hóa đơn</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="tong_tien_haicham">Tổng tiền:</string>
    <string name="tong_haicham">Tổng:</string>
    <string name="ten_khach_hang_view">Khách hàng:</string>
    <string name="ten_khach_hang">Tên khách hàng:</string>
    <string name="hoa_don">Hóa đơn</string>
    <string name="ma">Mã HĐ</string>
    <string name="thongtin_khachhang">Thông tin khách hàng</string>
    <string name="chi_tiet_don_hang">Chi tiết đơn hàng</string>
    <string name="dia_chi">Địa chỉ: </string>
    <string name="phone">Điện thoại: </string>
    <string name="mua_hang">Mua hàng</string>
    <string name="chon_khach_hang">Chọn khách hàng</string>
    <string name="nhap_ten_khach_hang_timkiem">Nhập thông tin tìm kiếm</string>
    <string name="ma_khach_hang">Mã khách hàng</string>
    <string name="ten_khach_hang_input">Tên khách hàng</string>
    <string name="dia_chi_input">Địa chỉ</string>
    <string name="phone_input">Số điện thoại</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="huy_bo">Hủy bỏ</string>
    <string name="them_moi">Thêm mới</string>
    <string name="them">Thêm</string>
    <string name="them_moi_khach_hang">Thêm mới khách hàng</string>
    <string name="chi_tiet_san_pham">Chi tiết sản phẩm</string>
    <string name="tao_don_hang">Tạo đơn hàng</string>
    <string name="cap_nhat_don_hang">Cập nhật đơn hàng</string>
    <string name="tao_don_hang_thanh_cong">Tạo đơn hàng thành công</string>
    <string name="thong_ke">Thống kê</string>
    <string name="donvi">Đơn vị: </string>
    <string name="den_ngay">Đến ngày</string>
    <string name="tu_ngay">Từ ngày</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="gia_ban">Giá bán:</string>
    <string name="soluong">Số lượng:</string>
    <string name="khong_co_san_pham_trong_gio_hang">Không có sản phẩm trong giỏ hàng</string>
    <string name="ket_noi_may_in">Kết nối máy in</string>
    <string name="tuy_chon">Tùy chọn</string>
    <string name="chuc_nang_dang_cap_nhat_vui_long_thu_lai_sau">Chức năng đang cập nhật, vui lòng quay lại sau</string>
    <string name="so_phieu">Số phiếu:</string>
    <string name="ten_nhan_vien">Nhân viên:</string>
    <string name="thoi_gian">Thời gian:</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="don_gia">Đơn giá</string>
    <string name="sl">SL</string>
    <string name="thanh_tien">Thành tiền</string>
    <string name="them_moi_kh_fail_check_again">Thêm mới khách hàng không thành công, vui lòng kiểm tra lại</string>
    <string name="them_moi_kh_ok">Thêm mới khách hàng thành công</string>
    <string name="hen_gap_lai">Xin chào quý khách, hẹn gặp lại!</string>
    <string name="please_add_item_in_cart">Vui lòng thêm sản phẩm vào giỏ hàng</string>
    <string name="from_to_date_in_30_day">Tìm kiếm trong khoảng thời gian 30 ngày</string>
    <string name="khong_co_du_lieu">Không có dữ liệu</string>
    <string name="dang_tai_du_lieu">Đang tải dữ liệu, vui lòng đợi!</string>
    <string name="sua_don_hang">Sửa đơn hàng</string>
    <string name="huy_don_hang">Hủy đơn hàng</string>
    <string name="gui">Gửi</string>
    <string name="sua">Sửa</string>
    <string name="gia_ban_hien_tai">Giá bán hiện tại:</string>
    <string name="gia_thay_doi">Giá thay đổi:</string>
    <string name="vui_long_nhap_dung_thong_tin_gia_thay_doi">Cần nhập đúng thông tin giá thay đổi</string>
    <string name="cap_nhat_thanh_cong">Cập nhật thành công</string>
    <string name="huy_don_hang_khong_thanh_cong">Hủy đơn hàng không thành công</string>
    <string name="huy_don_hang_thanh_cong">Hủy đơn hàng thành công</string>
    <string name="gui_don_hang_khong_thanh_cong">Gửi đơn hàng không thành công</string>
    <string name="gui_don_hang_thanh_cong">Gửi đơn hàng thành công</string>
    <string name="trang_thai">Trạng thái:</string>
    <string name="nhap_gia_thay_doi">Nhập giá thay đổi</string>

    <string name="title_bill_manage">Quản lý đơn hàng</string>
    <string name="title_thuchi_manage">Quản lý thu chi</string>
    <string name="title_detail_bill">Chi tiết đơn hàng</string>
    <string name="chaomungtoidmart">Chào mừng đến D-Mart Stone</string>
    <string name="thaydoimatkhau">Thay đổi mật khẩu</string>
    <string name="quan_ly">Quản lý</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="thu_chi">Thu chi</string>
    <string name="tongdonhanghaicham">Tổng đơn hàng:</string>
    <string name="doanhso">Doanh số:</string>
    <string name="phieu">Phiếu</string>
    <string name="tenkhachhang">Tên khách hàng</string>
    <string name="dathanhtoan">Đã thanh toán:</string>
    <string name="tensanphamhaicham">Tên sản phẩm:</string>
    <string name="tensanpham">Tên sản phẩm</string>
    <string name="tongchi_hai_cham">Tổng chi:</string>
    <string name="tong_thu_hai_cham">Tổng thu:</string>
    <string name="chieudai">Chiều dài</string>
    <string name="chieurong">Chiều rộng</string>
    <string name="soluongvien">Số tấm</string>
    <string name="soluongvienhaicham">Số tấm:</string>
    <string name="dientich">Diện tích</string>
    <string name="dientichmetvuong">Diện tích (m2):</string>
    <string name="nhap_so_luong_vien">Nhập số tấm</string>
    <string name="nhap_so_luong_vien_hai_cham">Nhập số tấm:</string>
    <string name="nhap_chieu_rong">Nhập chiều rộng</string>
    <string name="nhap_chieu_dai">Nhập chiều dài</string>
    <string name="trunutmetvuong">Diện tích nứt (m2):</string>
    <string name="dientichconlai">Diện tích thực tế (m2):</string>
    <string name="themdientichnut">Thêm diện tích nứt?</string>
    <string name="nhapchieudainut">Nhập chiều dài nứt</string>
    <string name="nhapchieurongnut">Nhập chiều rộng nứt</string>
    <string name="chonsanphamkhac">Chọn sản phẩm khác</string>
    <string name="menu_ban_hang">Bán hàng</string>
    <string name="menu_cai_dat">Cài đặt</string>
    <string name="dia_chi_ip">IP Máy in</string>
    <string name="_58mm">58mm</string>
    <string name="_80mm">80mm</string>
    <string name="kho_giay_in">Khổ giấy</string>
    <string name="thong_tin_ket_noi">Thông tin kết nối</string>
    <string name="thong_tin_may_in">Thông tin máy in</string>
    <string name="nhap_ip_may_in">Nhập IP máy in</string>
    <string name="ket_noi_thanh_cong">Kết nối thành công</string>
    <string name="ket_noi_that_bai">Kết nối thất bại</string>
    <string name="can_ket_noi_may_in">Bạn cần kết nối máy in</string>
    <string name="da_ketnoi_truoc">Đã kết nối máy in trước đó</string>
    <string name="tong_tien_button">0 sản phẩm = 0đ</string>
</resources>