<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNameItemEditMoneyDlg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="left|center_vertical"
        android:maxLines="2"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:text="Set the background selector for the drop-down list rows"
        android:textColor="@color/colorTextChild"
        android:textSize="@dimen/_11ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorGachChan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="left|center_vertical"
            android:text="@string/gia_ban_hien_tai"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvPriceCurrentItemEditMoneyDlg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end|center_vertical"
            android:paddingEnd="@dimen/_3sdp"
            android:text="100.000 đ"
            android:textColor="@color/colorVinID"
            android:textSize="@dimen/_11ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="left|center_vertical"
            android:text="@string/donvi"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvUnitItemEditMoneyDlg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end|center_vertical"
            android:paddingEnd="@dimen/_3sdp"
            android:text="Thùng"
            android:textColor="@color/colorVinID"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="left|center_vertical"
            android:text="@string/gia_thay_doi"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/edtPriceChangeItemEditMoneyDlg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edt_custom"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end|center_vertical"
            android:hint="@string/nhap_gia_thay_doi"
            android:inputType="number"
            android:paddingEnd="@dimen/_3sdp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/colorGachChan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancelEditMoneyDlg"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_xam"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/huy_bo"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/btnApproveEditMoneyDlg"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_button_cam"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sua"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>
</LinearLayout>