<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvThongTinKhachHang"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/colorItemClick"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_6sdp"
        android:text="@string/thongtin_khachhang"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llNameCustomerCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvThongTinKhachHang"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_6sdp"
            android:text="@string/ten_khach_hang_view"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvNameCustomerCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end|center_vertical"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:textColor="@color/colorTextChild"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddessCustomerCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llNameCustomerCart"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_6sdp"
            android:text="@string/dia_chi"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvAddressCustomerCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end|center_vertical"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:textColor="@color/colorTextChild"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhoneCustomerCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llAddessCustomerCart"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_6sdp"
            android:text="@string/phone"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/tvPhoneCustomerCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_regular"
            android:gravity="end|center_vertical"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:textColor="@color/colorTextChild"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDetailBill"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/llPhoneCustomerCart"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@color/colorItemClick"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_6sdp"
        android:text="@string/chi_tiet_don_hang"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvItemsCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llPrice"
        android:layout_below="@+id/tvDetailBill" />

    <TextView
        android:id="@+id/tvGachChanCart"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/llPrice"
        android:background="@color/colorItemClick" />

    <LinearLayout
        android:id="@+id/llPrice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@id/btnOrderCart"
        android:layout_marginLeft="@dimen/_3sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="left|center_vertical"
            android:paddingStart="@dimen/_3sdp"
            android:text="@string/tong_tien"
            android:textColor="@color/colorTextParent"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/tvTotalPriceCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_regular"
            android:gravity="right|center_vertical"
            android:paddingEnd="@dimen/_3sdp"
            android:text="0"
            android:textColor="@color/colorVinID"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnOrderCart"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:background="@drawable/shape_button_cam"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tao_don_hang"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp" />

</RelativeLayout>