<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bg_app"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imv_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_38sdp"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@color/white"
        android:elevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/chaomungtoidmart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_uername_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_mail"
                android:inputType="text"
                android:maxLength="30"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp"
                tools:ignore="Autofill">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@drawable/edt_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_14ssp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_4sdp"
                android:background="@drawable/shape_button_cam"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>